2019-01-24  Araki Ken  <arakiken@users.sf.net>

	* README.indic: Updated.

	* etc/*font*: ISCII_* except ISCII_TAMIL are activated.

	* libind/Makefile.in: tamil.o is not built.

2019-01-20  Araki Ken  <arakiken@users.sf.net>

	* ui_font_ft.c:
	  - A font name which contains "-" is not passed to FcNameParse().
	  - FT_ENCODING_APPLE_ROMAN is not set for ISCII in xft_font_open() and
	    cairo_font_open().
	  - "drawn_x +=" => "drawn_x =" in show_text().
	  - Unexpected increment of a counter is fixed in ui_window_draw_string32().

	* ui_window_cairo.c:
	  - show_iscii() is added to show ISCII characters.
	  - flush_glyphs() is called when font->size_attr == DOUBLE_WIDTH.

	* ui_window_xft.c:
	  ui_window_xft_draw_string8() shows iscii characters by
	  FC_Get_Char_Index() and XftDrawGlyphs().

2019-01-15  Araki Ken  <arakiken@users.sf.net>

	* vt_line_bidi.c: If vt_bidi() returns 0 or less value and base_was_trl
	  is true, vt_line_set_modified_all(line) is called.

	* vt_bidi.c: If size == 0, return 0 instead of 1.

	* terminaldisplayinit.cc: Code formatting.

2019-01-14  Araki Ken  <arakiken@users.sf.net>

	* vt_config_menu.[ch], vt_parser.[ch], vt_pty.[ch], vt_pty_intern.h,
	  vt_pty_mosh.c, vt_pty_ssh.c, vt_term.[ch]:
	  vt_pty_ptr_t -> vt_pty_t *

2019-01-13  Araki Ken  <arakiken@users.sf.net>

	* README.mosh: Updated.

	* ui_event_source.c, ui_screen.c:
	  'vt_term_get_slave_fd() == -1' => 'vt_term_get_pty_mode() == PTY_SSH'

	* ui_main_config.c: If bl_get_lang() is not only "ja" but also
	  "Japanese" (on win32api), the default value of "col_size_of_width_a"
	  option is 2 instead of 1.

	* vt_term.[ch]: vt_term_get_slave_fd() is added.

	* vt_pty_mosh.cpp:
	  - If the value of "MOSH_AWIDTH" environmental variable is "2",
	    wcwidth() returns 2 for ambiguous width characters.
	  - win32api locale is changed to *nix locale as follows before sending
	    it to mosh-server.
	    Japanese.Japan => ja_JP.UTF-8
	    Chinese.Taiwan => zh_TW.UTF-8